FLV files with AVC/AAC streams cannot be transcoded
As reported in: http://forum.videolan.org/posting.php?mode=reply&f=14&t=60234#pr201111
There are some FLV files which cannot be properly transcoded to other formats. I tried to convert the sample FLV file to H.264 video AAC audio inside TS or MP4 container but on both times there was no video in output file.
I can convert AVI files without any issues. Tested with VLC 1.0.0-RC2 and 1.1.0 git-20090525-2206 under Win32.
Sample file: http://tinyurl.com/n4vdd8
VLC log
qt4 debug: MRL passed to the Sout: C:\This_is_how_I_play_Nova_Prospekt.flv
qt4 warning: Transcode MRL: sout=#transcode{vcodec=h264,vb=800,scale=1,acodec=mp4a,ab=128,channels=2,samplerate=44100}:duplicate{dst=std{access=file,mux=ts,dst='C:\softa\vlc-1.1.0-git-20090525-2206\broken.ts'}
qt4 debug: Adding option: sout=#transcode{vcodec=h264,vb=800,scale=1,acodec=mp4a,ab=128,channels=2,samplerate=44100}:duplicate{dst=std{access=file,mux=ts,dst='C:\softa\vlc-1.1.0-git-20090525-2206\broken.ts'}
main debug: adding item `Streaming' ( C:\This_is_how_I_play_Nova_Prospekt.flv )
qt4 debug: Adding a new MRL to recent ones: C:\This_is_how_I_play_Nova_Prospekt.flv
main debug: rebuilding array of current - root Playlist
main debug: rebuild done - 1 items, index -1
main debug: processing request item Streaming node null skip 0
main debug: resyncing on Streaming
main debug: Streaming is at 0
main debug: starting new item
main debug: creating new input thread
main debug: Creating an input for 'Streaming'
main debug: thread (input) created at priority 1 (input/input.c:230)
main debug: thread started
main debug: stream=`transcode'
main debug: looking for sout stream module: 1 candidate
main debug: stream=`duplicate'
main debug: looking for sout stream module: 1 candidate
stream_out_duplicate debug: creating 'duplicate'
stream_out_duplicate debug: * adding `std{access=file,mux=ts,dst='C:\softa\vlc-1.1.0-git-20090525-2206\broken.ts'}'
main debug: stream=`std'
main debug: looking for sout stream module: 1 candidate
main debug: set config option: sout-standard-access to file
main debug: set config option: sout-standard-mux to ts
main debug: set config option: sout-standard-dst to C:\softa\vlc-1.1.0-git-20090525-2206\broken.ts
stream_out_standard debug: creating `file/ts://C:\softa\vlc-1.1.0-git-20090525-2206\broken.ts'
stream_out_standard debug: extension is ts
stream_out_standard debug: extension -> mux=ts
stream_out_standard debug: using `file/ts://C:\softa\vlc-1.1.0-git-20090525-2206\broken.ts'
main debug: looking for sout access module: 1 candidate
qt4 debug: IM: Setting an input
access_output_file debug: file access output opened (C:\softa\vlc-1.1.0-git-20090525-2206\broken.ts)
main debug: using sout access module "access_output_file"
main debug: TIMER module_need() : 7.000 ms - Total 7.000 ms / 1 intvls (Avg 7.000 ms)
stream_out_standard debug: access opened
main debug: looking for sout mux module: 1 candidate
qt4 debug: Updating the geometry
qt4 debug: size: 135 - 349
qt4 debug: sizeHint: 135 - 349
qt4 debug: Updating the geometry
qt4 debug: size: 135 - 349
qt4 debug: sizeHint: 135 - 349
mux_ts debug: shaping=200000 pcr=70000 dts_delay=400000
main debug: using sout mux module "mux_ts"
main debug: TIMER module_need() : 15.000 ms - Total 15.000 ms / 1 intvls (Avg 15.000 ms)
main debug: muxer support adding stream at any time
main debug: muxer prefers to wait for all ES before starting to mux
stream_out_standard debug: mux opened
main debug: using sout stream module "stream_out_standard"
main debug: TIMER module_need() : 32.000 ms - Total 32.000 ms / 1 intvls (Avg 32.000 ms)
main debug: using sout stream module "stream_out_duplicate"
main debug: TIMER module_need() : 34.000 ms - Total 34.000 ms / 1 intvls (Avg 34.000 ms)
main debug: set config option: sout-transcode-vcodec to h264
main debug: set config option: sout-transcode-vb to 800
main debug: set config option: sout-transcode-scale to 1
main debug: set config option: sout-transcode-acodec to mp4a
main debug: set config option: sout-transcode-ab to 128
main debug: set config option: sout-transcode-channels to 2
main debug: set config option: sout-transcode-samplerate to 44100
stream_out_transcode debug: codec audio=mp4a 44100Hz 2 channels 128Kb/s
stream_out_transcode debug: codec video=h264 0x0 scaling: 1.000000 800kb/s
main debug: using sout stream module "stream_out_transcode"
main debug: TIMER module_need() : 53.000 ms - Total 53.000 ms / 1 intvls (Avg 53.000 ms)
main debug: using timeshift granularity of 50 MBytes
main debug: using timeshift path 'C:\Users\xxx\AppData\Local\Temp'
main debug: `C:\This_is_how_I_play_Nova_Prospekt.flv' gives access `' demux `' path `C:\This_is_how_I_play_Nova_Prospekt.flv'
main debug: creating demux: access='' demux='' path='C:\This_is_how_I_play_Nova_Prospekt.flv'
main debug: looking for access_demux module: 3 candidates
main debug: TIMER module_need() : 2.000 ms - Total 2.000 ms / 1 intvls (Avg 2.000 ms)
main debug: creating access '' path='C:\This_is_how_I_play_Nova_Prospekt.flv'
main debug: looking for access module: 5 candidates
vcd debug: trying .cue file: C:\This_is_how_I_play_Nova_Prospekt.cue
vcd debug: could not find .cue file
access_file debug: opening file `C:\This_is_how_I_play_Nova_Prospekt.flv'
main debug: using access module "access_file"
main debug: TIMER module_need() : 2.000 ms - Total 2.000 ms / 1 intvls (Avg 2.000 ms)
main debug: Using AStream*Stream
main debug: pre buffering
main debug: received first data after 0 ms
main debug: pre-buffering done 1024 bytes in 0s - 1000000 kbytes/s
main debug: looking for stream_filter module: 2 candidates
main debug: TIMER module_need() : 0.000 ms - Total 0.000 ms / 1 intvls (Avg 0.000 ms)
main debug: looking for stream_filter module: 1 candidate
main debug: using stream_filter module "stream_filter_record"
main debug: TIMER module_need() : 0.000 ms - Total 0.000 ms / 1 intvls (Avg 0.000 ms)
main debug: creating demux: access='' demux='' path='C:\This_is_how_I_play_Nova_Prospekt.flv'
main debug: looking for demux module: 50 candidates
lua debug: Trying Lua scripts in C:\Users\xxx\AppData\Roaming\vlc\lua\playlist
lua debug: Trying Lua scripts in C:\softa\vlc-1.1.0-git-20090525-2206\\lua\playlist
lua debug: Trying Lua playlist script C:\softa\vlc-1.1.0-git-20090525-2206\\lua\playlist\anevia_streams.lua
lua debug: Trying Lua playlist script C:\softa\vlc-1.1.0-git-20090525-2206\\lua\playlist\appletrailers.lua
lua debug: Trying Lua playlist script C:\softa\vlc-1.1.0-git-20090525-2206\\lua\playlist\bbc_co_uk.lua
lua debug: Trying Lua playlist script C:\softa\vlc-1.1.0-git-20090525-2206\\lua\playlist\break.lua
lua debug: Trying Lua playlist script C:\softa\vlc-1.1.0-git-20090525-2206\\lua\playlist\canalplus.lua
lua debug: Trying Lua playlist script C:\softa\vlc-1.1.0-git-20090525-2206\\lua\playlist\cue.lua
lua debug: Trying Lua playlist script C:\softa\vlc-1.1.0-git-20090525-2206\\lua\playlist\dailymotion.lua
lua debug: Trying Lua playlist script C:\softa\vlc-1.1.0-git-20090525-2206\\lua\playlist\france2.lua
lua debug: Trying Lua playlist script C:\softa\vlc-1.1.0-git-20090525-2206\\lua\playlist\googlevideo.lua
lua debug: Trying Lua playlist script C:\softa\vlc-1.1.0-git-20090525-2206\\lua\playlist\joox.lua
lua debug: Trying Lua playlist script C:\softa\vlc-1.1.0-git-20090525-2206\\lua\playlist\koreus.lua
lua debug: Trying Lua playlist script C:\softa\vlc-1.1.0-git-20090525-2206\\lua\playlist\lelombrik.lua
lua debug: Trying Lua playlist script C:\softa\vlc-1.1.0-git-20090525-2206\\lua\playlist\megavideo.lua
lua debug: Trying Lua playlist script C:\softa\vlc-1.1.0-git-20090525-2206\\lua\playlist\metacafe.lua
lua debug: Trying Lua playlist script C:\softa\vlc-1.1.0-git-20090525-2206\\lua\playlist\youtube.lua
lua debug: Trying Lua playlist script C:\softa\vlc-1.1.0-git-20090525-2206\\lua\playlist\youtube_homepage.lua
lua debug: Trying Lua scripts in C:\softa\vlc-1.1.0-git-20090525-2206\\share\lua\playlist
avformat debug: detected format: flv
main debug: selecting program id=0
avformat debug: adding es: video codec = h264
avformat debug: adding es: audio codec = mp4a
avformat debug: AVFormat supported stream
avformat debug: - format = flv (FLV format)
avformat debug: - start time = 0
avformat debug: - duration = 203314000
main debug: using demux module "avformat"
main debug: TIMER module_need() : 91.000 ms - Total 91.000 ms / 1 intvls (Avg 91.000 ms)
main debug: looking for a subtitle file in C:\
main debug: looking for packetizer module: 21 candidates
main debug: using packetizer module "packetizer_h264"
main debug: TIMER module_need() : 15.000 ms - Total 15.000 ms / 1 intvls (Avg 15.000 ms)
main debug: thread (decoder) created at priority 0 (input/decoder.c:302)
main debug: thread started
main debug: looking for packetizer module: 21 candidates
packetizer_mpeg4audio debug: running MPEG4 audio packetizer
packetizer_mpeg4audio debug: AAC 44100Hz 1024 samples/frame
main debug: using packetizer module "packetizer_mpeg4audio"
main debug: TIMER module_need() : 1.000 ms - Total 1.000 ms / 1 intvls (Avg 1.000 ms)
main debug: thread (decoder) created at priority 2 (input/decoder.c:302)
main debug: thread started
main debug: starting in sync mode
main debug: looking for meta reader module: 1 candidate
main debug: TIMER module_need() : 1.000 ms - Total 1.000 ms / 1 intvls (Avg 1.000 ms)
main debug: `C:\This_is_how_I_play_Nova_Prospekt.flv' successfully opened
main debug: switching to async mode
main debug: Buffering 0%
main debug: Buffering 7%
main debug: Buffering 15%
main debug: Buffering 23%
main debug: Buffering 31%
main debug: Buffering 38%
main debug: Buffering 46%
main debug: Buffering 54%
main debug: Buffering 62%
main debug: Buffering 69%
main debug: Buffering 77%
main debug: Buffering 85%
main debug: Buffering 93%
main debug: Stream buffering done (302 ms in 1 ms)
main debug: adding a new sout input (sout_input:0x4466680)
stream_out_transcode debug: creating audio transcoding from fcc=`mp4a' to fcc=`mp4a'
main debug: looking for decoder module: 35 candidates
main debug: using decoder module "faad"
main debug: TIMER module_need() : 11.000 ms - Total 11.000 ms / 1 intvls (Avg 11.000 ms)
main debug: looking for encoder module: 11 candidates
avcodec debug: libavcodec initialized (interface 0x341c00)
qt4 debug: New Event: type 1103
qt4 debug: New Event: type 1116
qt4 debug: New caching: 100
qt4 debug: New caching: 100
avcodec debug: found encoder MPEG AAC Audio
main debug: using encoder module "avcodec"
main debug: TIMER module_need() : 45.000 ms - Total 45.000 ms / 1 intvls (Avg 45.000 ms)
stream_out_transcode debug: Looking for filter (fl32->s16l, channels 2->2, rate 44100->44100)
main debug: looking for audio filter2 module: 8 candidates
audio_format debug: fl32->s16l, bits per sample: 32->16
main debug: using audio filter2 module "audio_format"
main debug: TIMER module_need() : 7.000 ms - Total 7.000 ms / 1 intvls (Avg 7.000 ms)
main debug: Filter 'audio_format' (0x44a0364) appended to chain
stream_out_transcode debug: Got complete audio filter chain
stream_out_duplicate debug: duplicated a new stream codec=mp4a (es=1 group=0)
main debug: adding a new input
mux_ts debug: adding input codec=mp4a pid=68
mux_ts debug: new PCR PID is 68
stream_out_duplicate debug: - added for output 0
main debug: Decoder buffering done in 63 ms
faad warning: decoded zero sample
qt4 debug: New Event: type 1119
qt4 debug: New Event: type 1119
qt4 debug: New Event: type 1107
qt4 debug: Updating the geometry
qt4 debug: size: 135 - 349
qt4 debug: sizeHint: 135 - 349
qt4 debug: New Event: type 1107
qt4 debug: Updating the geometry
qt4 debug: size: 135 - 349
qt4 debug: sizeHint: 135 - 349
qt4 debug: New Event: type 1107
qt4 debug: Updating the geometry
qt4 debug: size: 135 - 349
qt4 debug: sizeHint: 135 - 349
qt4 debug: New Event: type 1108
qt4 debug: Updating the geometry
qt4 debug: size: 135 - 349
qt4 debug: sizeHint: 135 - 349
qt4 debug: New Event: type 1119
qt4 debug: New Event: type 1112
qt4 debug: New Event: type 1107
qt4 debug: Updating the geometry
qt4 debug: size: 135 - 349
qt4 debug: sizeHint: 135 - 349
qt4 debug: New Event: type 1114
qt4 debug: New Event: type 1114
qt4 debug: New Event: type 1114
qt4 debug: New Event: type 1114
qt4 debug: New Event: type 1107
qt4 debug: Updating the geometry
qt4 debug: size: 135 - 349
qt4 debug: sizeHint: 135 - 349
qt4 debug: New Event: type 1114
qt4 debug: New Event: type 1114
qt4 debug: New Event: type 1114
qt4 debug: New Event: type 1114
qt4 debug: New Event: type 1114
qt4 debug: New Event: type 1114
qt4 debug: New Event: type 1107
qt4 debug: Updating the geometry
qt4 debug: size: 135 - 349
qt4 debug: sizeHint: 135 - 349
qt4 debug: New Event: type 1108
qt4 debug: Updating the geometry
qt4 debug: size: 135 - 349
qt4 debug: sizeHint: 135 - 349
qt4 debug: New Event: type 1107
qt4 debug: Updating the geometry
qt4 debug: size: 135 - 349
qt4 debug: sizeHint: 135 - 349
qt4 debug: New Event: type 1108
qt4 debug: Updating the geometry
qt4 debug: size: 135 - 349
qt4 debug: sizeHint: 135 - 349
qt4 debug: New Event: type 1112
qt4 debug: New Event: type 1103
qt4 debug: New Event: type 1116
qt4 debug: New Event: type 1116
qt4 debug: New Event: type 1116
qt4 debug: New Event: type 1116
qt4 debug: New Event: type 1116
qt4 debug: New Event: type 1116
qt4 debug: New Event: type 1116
qt4 debug: New Event: type 1116
qt4 debug: New Event: type 1116
qt4 debug: New Event: type 1116
qt4 debug: New Event: type 1116
qt4 debug: New Event: type 1116
qt4 debug: New Event: type 1116
qt4 debug: New Event: type 1116
main debug: EOF reached
main debug: waiting decoder fifos to empty
main debug: finished input
main debug: thread times: real 0m15.565000s, kernel 0m0.078000s, user 0m0.015600s
main debug: removing module "packetizer_h264"
main debug: killing decoder fourcc `h264', 0 PES in FIFO
main debug: thread times: real 0m15.557000s, kernel 0m0.374402s, user 0m15.178897s
main debug: removing module "packetizer_mpeg4audio"
main debug: killing decoder fourcc `mp4a', 0 PES in FIFO
main debug: removing a sout input (sout_input:0x4466680)
main debug: TIMER encoding audio frame : 1.000 ms - Total 12668.001 ms / 8755 intvls (Avg 1.447 ms)
main debug: removing module "faad"
main debug: removing module "avcodec"
main debug: Filter 'audio_format' (0x44a0364) removed from chain
main debug: removing module "audio_format"
mux_ts debug: removing input pid=68
mux_ts debug: new PCR PID is 8191
main warning: no more input streams for this mux
main debug: removing module "avformat"
main debug: removing module "stream_filter_record"
main debug: removing module "access_file"
main debug: Program doesn't contain anymore ES
main debug: thread ended
main debug: dead input
main debug: destroying useless sout
main debug: destroying chain... (name=transcode)
main debug: destroying chain... (name=duplicate)
stream_out_duplicate debug: closing a duplication
main debug: destroying chain... (name=std)
main debug: removing module "mux_ts"
access_output_file debug: file access output closed
main debug: removing module "access_output_file"
main debug: removing module "stream_out_standard"
main debug: destroying chain done
main debug: removing module "stream_out_duplicate"
main debug: destroying chain done
main debug: removing module "stream_out_transcode"
main debug: destroying chain done
main debug: thread times: real 0m15.736000s, kernel 0m0.265201s, user 0m0.514803s
main debug: changing item without a request (current 0/1)
main debug: nothing to play
qt4 debug: IM: Deleting the input
qt4 debug: Updating the geometry
qt4 debug: size: 135 - 349
qt4 debug: sizeHint: 135 - 349
qt4 debug: Updating the geometry
qt4 debug: size: 135 - 349
qt4 debug: sizeHint: 135 - 349
main debug: Destroying the input for 'Streaming'
main debug: TIMER input launching for 'Streaming' : 191.000 ms - Total 191.000 ms / 1 intvls (Avg 191.000 ms)
Edited by jhb50