AVFormat Demuxer : Set fourcc based on source container.

This is required for those containers which mux the
AVCDecoderConfigurationRecord as private/extra data
so that the AVC packetizer works correctly.

This should close #2850

Signed-off-by: Jean-Baptiste Kempf <jb@videolan.org>